<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lly_sector_edit_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorTextAppearance="@style/Widget.TextInputError"
        app:hintTextAppearance="@style/Widget.TextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@+id/guideStart"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilShortName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorTextAppearance="@style/Widget.TextInputError"
        app:hintTextAppearance="@style/Widget.TextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edShortName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edShortName" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvInventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvInventory"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tilShortName" />

    <Spinner
        android:id="@+id/spInventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/spInventory"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tvInventory" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorTextAppearance="@style/Widget.TextInputError"
        app:hintTextAppearance="@style/Widget.TextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/spInventory">

        <!-- Se modifica la apariencia del EditText por defecto del sistema
        aplicando un tema que se ha definido con los atributos controlcolorNormal y
        similares en styles.xml
        android:theme="@style/Widget.EditText"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/edDescription"
            android:inputType="textMultiLine"
            android:lines="5" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorTextAppearance="@style/Widget.TextInputError"
        app:hintTextAppearance="@style/Widget.TextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toEndOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/edImage"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_action_chek_foreground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>